--- a/WebApp/package.json
+++ b/WebApp/package.json
@@ -19,6 +19,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@microsoft/signalr": "^7.0.2",
     "@tanstack/react-query": "^4.22.0",
     "axios": "^1.2.3",
     "formik": "^2.2.9",
