--- a/WebApp/package.json
+++ b/WebApp/package.json
@@ -24,6 +24,7 @@
     "axios": "^1.2.3",
     "formik": "^2.2.9",
     "framer-motion": "^8.4.3",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.6.2",
